--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,11 @@ email_address                             : tusk.roborage@gmail.com
 
 
 # Feature List                            Edit, add or remove features to be presented.
-# features                                  :
+features                                  :
 
-#   - title                                 : GitHub Pages Jekyll Theme
-#     description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
-#     fontawesome_icon_name                 : magic
+  - title                                 : Contact
+    description                           : For further enquiry : contact us at : tusk.roborage@gmail.com
+    fontawesome_icon_name                 : magic
     
 #   - title                                 : iPhone Device Preview
 #     description                           : Preview your app in the context of an iPhone device. Five different device colors included.
