--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ email_address                             : tusk.roborage@gmail.com
 features                                  :
 
   - title                                 : Contact
-    description                           : For further enquiry : contact us at : tusk.roborage@gmail.com
+    description                           : For further enquiry, contact us at tusk.roborage@gmail.com
     fontawesome_icon_name                 : magic
     
 #   - title                                 : iPhone Device Preview
